    - bookworm/constexpr.patch: refresh & add more fixes.
    - bookworm/lex-3way.patch: pull in another STL function from clang-17.
    - bookworm/blink-attrib.patch: add build fix to reorder __attribute__.
    - fixes/highway-include-path.patch: upstream fixed the original issue
      in a broken way, making this worse. Add more to this patch to work
      around that.

  [ Daniel Richard G. ]
  * d/rules: Parameterize Rust sysroot to simplify using a different one.
  * d/patches:
    - bookworm/highway-blink.patch: Avoid armhf/arm64 FTBFS by disabling
      Blink feature that requires newer libhwy-dev version.

 -- Andres Salomon <dilinger@debian.org>  Wed, 14 Aug 2024 13:11:25 -0400

chromium (127.0.6533.119-1) unstable; urgency=high

  [ Andres Salomon ]
  * New upstream stable release.
  * d/patches/upstream/armhf-ftbfs.patch: armhf FTBFS fix from upstream.

  [ Daniel Richard G. ]
  * d/patches:
    - ppc64le/crashpad/0002-Include-cstddef-to-fix-build.patch: Drop, as
      the original FTBFS that this fixed is no longer reproducible.
  * d/rules: Add to ppc64el CXXFLAGS to quash copious AltiVec warnings.

 -- Andres Salomon <dilinger@debian.org>  Wed, 14 Aug 2024 13:11:25 -0400

chromium (127.0.6533.99-1~deb12u1) bookworm-security; urgency=high

  [ Andres Salomon ]
  * New upstream security release.
    - CVE-2024-7532: Out of bounds memory access in ANGLE.
      Reported by wgslfuzz.
    - CVE-2024-7533: Use after free in Sharing. Reported by
      lime(@limeSec_) from TIANGONG Team of Legendsec at QI-ANXIN Group.
    - CVE-2024-7550: Type Confusion in V8.
      Reported by Zhenghang Xiao (@Kipreyyy).
    - CVE-2024-7534: Heap buffer overflow in Layout.
      Reported by Tashita Software Security.
    - CVE-2024-7535: Inappropriate implementation in V8.
      Reported by Tashita Software Security.
    - CVE-2024-7536: Use after free in WebAudio.
      Reported by Cassidy Kim(@cassidy6564).

  [ Timothy Pearson ]
  * d/patches/ppc64le: