@@ -15,7 +15,9 @@ This patch can go away when bookworm gets a newer rustc.
 
 --- a/third_party/crabbyavif/src/src/lib.rs
 +++ b/third_party/crabbyavif/src/src/lib.rs
-@@ -1,4 +1,5 @@
+@@ -13,6 +13,7 @@
+ // limitations under the License.
+ 
  #![deny(unsafe_op_in_unsafe_fn)]
 +#![feature(int_roundings)]
  
