@@ -80,9 +80,9 @@ libs.
    public = [ "nullability.h" ]
 +  visibility = [ "*" ]
    deps = [
+     ":config",
      ":core_headers",
-     "//third_party/abseil-cpp/absl/meta:type_traits",
-@@ -81,6 +82,7 @@ absl_source_set("config") {
+@@ -82,6 +83,7 @@ absl_source_set("config") {
      "options.h",
      "policy_checks.h",
    ]
@@ -90,7 +90,7 @@ libs.
  }
  
  absl_source_set("cycleclock_internal") {
-@@ -116,6 +118,7 @@ absl_source_set("core_headers") {
+@@ -117,6 +119,7 @@ absl_source_set("core_headers") {
      "port.h",
      "thread_annotations.h",
    ]
@@ -113,7 +113,7 @@ libs.
 +  visibility = [ "*" ]
    deps = [
      ":algorithm",
-     "//third_party/abseil-cpp/absl/base:nullability",
+     "//third_party/abseil-cpp/absl/base:config",
 --- a/third_party/abseil-cpp/absl/container/BUILD.gn
 +++ b/third_party/abseil-cpp/absl/container/BUILD.gn
 @@ -50,6 +50,7 @@ absl_source_set("inlined_vector_internal
